--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
 
     <string name="popup_title_permission_files_access">Cette application a besoin de permission pour fonctionner.</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
