--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,7 +31,7 @@
     <string name="toast_message_error_occurred">Error occurred</string>
     <string name="toast_message_no_image_chosen">No image chosen</string>
     <string name="notification_title">Real estate manager</string>
-    <string name="title_dialog_choose_type_of_place">Choose a type of place :</string>
+    <string name="title_dialog_choose_type_of_place">Select type of place :</string>
     <string name="button_generic_text_type_of_place">Type of place</string>
     <string name="toast_message_date_not_correct">You have to choose a passed or present date</string>
 
@@ -65,6 +65,12 @@
     //FOR MAIN ACTIVITY
     <string name="toast_message_no_internet_cant_access_to_map">You don\'t have internet, you can\'t access to this screen</string>
     <string name="toolbar_title">Real Estate Manager</string>
+
+    //FOR SEARCH ACTIVITY
+    <string name="dialog_title_select_status">Select status :</string>
+    <string name="button_text_status">Status</string>
+    <string name="button_text_type_of_place">Type of place</string>
+    <string name="interests_title">Interests near this place :</string>
 
 
 </resources>
