--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,8 @@
     <string name="toolbar_title_settings">Settings</string>
     <string name="dialog_title_enter_new_name">Enter a new name :</string>
     <string name="toast_message_save_your_name">Click on button to save your name</string>
+    <string name="dialog_title_save_your_name">Save your name</string>
+    <string name="dialog_message_save_your_name">Click on the button to save your name</string>
 
     //FOR PLACE VIEWHOLDER
     <string name="status_sold">Sold</string>
@@ -74,6 +76,9 @@
     <string name="interests_title">Interests near this place :</string>
     <string name="toast_message_field_value_missing">You have to inform at least type of place</string>
     <string name="toast_message_no_result_found">No results found for theses criteria :(</string>
+    <string name="dialog_no_results_found">No results found</string>
+    <string name="dialog_message_try_again">Try with new criteria...</string>
+    <string name="dialog_ok">Ok</string>
 
 
 </resources>
